--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1208,16 +1208,41 @@ p .index-inspire-change-text {
 
 .post-grid {
   display: flex;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 .post {
   border: 0.01rem solid #015e41;
   border-radius: 0.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
-.post:not(:last-child) {
-  border-bottom: 0;
+
+.likes-comments {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+}
+.likes-comments .likes-comments-likes-field {
+  margin-right: 2rem;
+}
+.likes-comments .likes-comments-comment-field {
+  margin-left: 2rem;
+}
+
+.filled-heart {
+  color: red;
+}
+
+.empty-heart {
+  color: black;
+}
+
+.like-count, .comment-count {
+  margin-left: 5px;
+}
+
+.fa-comment {
+  margin-left: 10px;
 }
 
 .post-carousel {
@@ -1332,9 +1357,6 @@ p .index-inspire-change-text {
     border-radius: 0.5rem;
     margin-bottom: 0.5rem;
   }
-  .post:not(:last-child) {
-    border-bottom: 0;
-  }
   .carousel-chevron {
     background-color: #fff;
     color: #015e41;
@@ -1377,9 +1399,6 @@ p .index-inspire-change-text {
     border: 0.01rem solid #015e41;
     border-radius: 0.5rem;
     margin-bottom: 0.5rem;
-  }
-  .post:not(:last-child) {
-    border-bottom: 0;
   }
   .carousel-chevron {
     background-color: #fff;
